# vcx

./: Cargo.toml  LICENSE  README.md  README_zh.md
src/: lib.rs  main.rs
src/cli/: init.rs  lint.rs  mod.rs  scan.rs  status.rs
src/core/: config.rs  diagnostic.rs  mod.rs  rule.rs
src/detect/: mod.rs  patterns.rs  scanner.rs
src/lint/: breadth.rs  conflict.rs  duplicate.rs  format.rs  mod.rs  stale.rs
src/output/: json.rs  table.rs
src/parsers/: aider.rs  claude.rs  copilot.rs  cursor.rs  mod.rs  windsurf.rs
tests/fixtures/multi_tool/: CLAUDE.md
tests/fixtures/multi_tool/.cursor/rules/: typescript.mdc
tests/fixtures/multi_tool/.github/: copilot-instructions.md
